Update fontsize of input datetime and ensure answer never overflows

--- a/src/main/resources/style.css
+++ b/src/main/resources/style.css
@@ -101,7 +101,7 @@ input[type='datetime-local'] {
 }
 
 input[type='datetime-local'] {
-  font-size: min(2vw, 13px);
+  font-size: clamp(min(2vw, 13px), 2.1vw, 13px);
 }
 
 
@@ -219,6 +219,7 @@ tbody > tr:nth-child(odd) {
 
 #content_container {
   padding: 1rem;
+  max-width: 100vw;
 }
 
 #content_wrapper {
